--- a/config/static.conf
+++ b/config/static.conf
@@ -3,9 +3,7 @@ network:
     enp0s3:
       dhcp4: no
       addresses: [192.168.0.10/24]
-      routes:
-      - to: default
-        via: 192.168.0.1
+      gateway4: 192.168.0.1
       nameservers:
          addresses: [8.8.8.8]
   version: 2
